--- a/barbearia/styles.css
+++ b/barbearia/styles.css
@@ -1,3 +1,17 @@
+/* Estilizando o body */
+body {
+    font-family: Arial, sans-serif; /* Define a fonte do texto */
+    line-height: 1.6; /* Define a altura da linha para facilitar a leitura */
+    background-color: rgb(0, 0, 0); /* Define a cor de fundo do body */
+    color: #333; /* Define a cor do texto */
+    background-image: url('img/images.jpeg'); /* Define uma imagem de fundo */
+    background-size: cover; /* Faz a imagem cobrir todo o fundo */
+    background-position: center; /* Centraliza a imagem de fundo */
+    background-repeat: no-repeat; /* Impede que a imagem se repita */
+}
+/* fim Estilizando o body */
+
+
 /* Cabeçalho */
 header {
     background-color: #21292e;
@@ -23,5 +37,32 @@ nav ul li a {
 
 /* FIM Cabeçalho */
 
-
+/*  Principal */
+#principal {
+    background: url('barbearia.jpg') no-repeat center center/cover; /* Define a imagem de fundo da seção hero */
+    height: 100vh; /* Define a altura da seção como 100% da altura da tela */
+    display: flex; /* Usa flexbox para o layout */
+    flex-direction: column; /* Alinha os itens verticalmente */
+    justify-content: center; /* Centraliza os itens verticalmente */
+    align-items: center; /* Centraliza os itens horizontalmente */
+    text-align: center; /* Centraliza o texto */
+    color: #fff; /* Define a cor do texto */
+}
+#principal h1{
+    font-size: 3rem; /* Define o tamanho da fonte do título */
+    margin-bottom: 20px; /* Adiciona margem inferior ao título */
+}
+#principal p{
+    font-size: 1.5rem; /* Define o tamanho da fonte do parágrafo */
+    margin-bottom: 30px; /* Adiciona margem inferior ao parágrafo */
+}
+#principal .btn {
+    background-color: #e8491d; /* Define a cor de fundo do botão */
+    color: #fff; /* Define a cor do texto do botão */
+    padding: 10px 20px; /* Adiciona padding ao botão */
+    text-decoration: none; /* Remove o sublinhado do texto do botão */
+    font-size: 1.2rem; /* Define o tamanho da fonte do botão */
+    border-radius: 5px; /* Adiciona bordas arredondadas ao botão */
+}
+/*  FIM Principal */
 
